# codex-ps

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: BUILD_REALTIME_TERMINAL_OVERVIEW_OF_RUNNING_CODEX_INSTANCES_2026-02-03.md  BUILD_REALTIME_TERMINAL_OVERVIEW_OF_RUNNING_CODEX_INSTANCES_2026-02-03_WORKLOG.md  NAME_ACTIVE_CODEX_SESSIONS_IN_TUI_2026-02-04.md  NAME_ACTIVE_CODEX_SESSIONS_IN_TUI_2026-02-04_WORKLOG.md
src/: app.rs  codex_home.rs  collector.rs  discovery.rs  git.rs  main.rs  model.rs  names.rs  rollout.rs  titles.rs  util.rs
