[package]
name = "codex-ps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
once_cell = "1.19"
ratatui = "0.28"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.147"
tempfile = "3.10"
wait-timeout = "0.2"
